--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <meta charset="utf-8">
   <head>
-    <title> </title>
+    <title>I am the best</title>
   </head>
-  <body>
-
+  <body style="background-color:Gray;">
+    <h1 style="background-color:Cyan;">Heading</h1>
+    <h2 style="color:DarkRed;">Heading Season 2</h2>
+    <p>Text</p>
+    <p><b>Text w/ bold</b></p>
+    <p><i>Text w/ italic</i></p>
+    <p><sub>subscript</sub>text<sup>superscript</sup></p>
+    <img src="./images/localimage1.png"><b><i>the face
   </body>
 </html>
